--- a/ComePenny/app/src/main/res/layout/activity_main.xml
+++ b/ComePenny/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
 <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -16,6 +18,7 @@
                 android:background="#0c2044">
 
                 <ImageView
+                    android:id="@+id/img_main_myinfo"
                     android:layout_marginLeft="6dp"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -34,15 +37,44 @@
                     android:src="@drawable/main_comepenny"/>
 
                 <ImageView
+                    android:id="@+id/img_main_setting"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_gravity="right|center"
-                    android:id="@+id/drawer_imageview_done"
                     android:layout_marginRight="6dp"
                     android:src="@drawable/main_setting"/>
-
-
             </android.support.v7.widget.Toolbar>
 
+            <!--
+            -->
+            <com.astuetz.PagerSlidingTabStrip
+                app:pstsDividerPadding="10dp"
+                app:pstsActivateTextColor="#0c2044"
+                app:pstsDeactivateTextColor="#a0a0a0"
+                app:pstsTabSwitch="true"
+                android:background="#ffffff"
+                android:id="@+id/tabsStrip"
+                app:pstsShouldExpand="true"
+                app:pstsTextAllCaps="true"
+                android:layout_width="match_parent"
+                app:pstsTabPaddingLeftRight="14dp"
+                app:pstsDividerColor="#eeeeee"
+                app:pstsUnderlineColor="#ffffff"
+                app:pstsIndicatorColor="#0c2044"
+                app:pstsIndicatorHeight="3dp"
+                app:pstsUnderlineHeight="0dp"
+                android:layout_height="40dp">
+            </com.astuetz.PagerSlidingTabStrip>
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/white"/>
+
+
         </LinearLayout>
+
+
+
 </RelativeLayout>
