--- a/ComePenny/app/src/main/res/values/styles.xml
+++ b/ComePenny/app/src/main/res/values/styles.xml
@@ -2,7 +2,10 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="actionBarSize">0dp</item>
+        <item name="contentInsetStart">0dp</item>
+        <item name="contentInsetEnd">0dp</item>
     </style>
+
 
 </resources>
