--- a/ComePenny/app/src/main/res/layout/row_idea.xml
+++ b/ComePenny/app/src/main/res/layout/row_idea.xml
@@ -61,9 +61,9 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="7dp"
-                android:background="#959595" />
+                android:background="@drawable/idea_bar" />
 
             <LinearLayout
                 android:layout_width="match_parent"
