--- a/ComePenny/app/src/main/res/layout/fragment_idea.xml
+++ b/ComePenny/app/src/main/res/layout/fragment_idea.xml
@@ -3,6 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e5e5e5">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
 
         <ListView
             android:listSelector="@android:color/transparent"
@@ -20,5 +25,5 @@
             android:layout_margin="16dp"
             android:src="@drawable/main_write"
             />
-
+    </LinearLayout>
 </FrameLayout>
