my info, setting 추가

--- a/ComePenny/app/src/main/res/layout/activity_idea_detail.xml
+++ b/ComePenny/app/src/main/res/layout/activity_idea_detail.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:id="@+id/tv_logo_name"
-            android:text="Costco"
+            android:text="Lego"
             android:textSize="20sp"
             android:textColor="#ffffff"
             android:clickable="false"
