--- a/ComePenny/app/src/main/res/layout/activity_myinfo.xml
+++ b/ComePenny/app/src/main/res/layout/activity_myinfo.xml
@@ -1,11 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Setting"
-        android:layout_gravity="center"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/booth_detail_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="#0c2044">
+
+
+            <!--
+            -->
+            <ImageView
+                android:id="@+id/btn_myinfo_back"
+                android:layout_width="12dp"
+                android:layout_height="20dp"
+                android:layout_gravity="left"
+                android:layout_marginLeft="6dp"
+                android:gravity="left"
+                android:src="@drawable/booth_back" />
+
+
+            <TextView
+                android:id="@+id/tv_myinfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="12dp"
+                android:clickable="false"
+                android:focusable="false"
+                android:longClickable="false"
+                android:text="내정보"
+                android:textColor="#ffffff"
+                android:textSize="17sp" />
+        </android.support.v7.widget.Toolbar>
+    </RelativeLayout>
+
+
+
+    <FrameLayout
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#e5e5e5">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+            <ListView
+                android:listSelector="@android:color/transparent"
+                android:paddingTop="4dp"
+                android:scrollbars="none"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/lv_mywrite" />
+
+
+        </LinearLayout>
+    </FrameLayout>
+
+
 </LinearLayout>
