--- a/ComePenny/app/src/main/res/layout/activity_setting.xml
+++ b/ComePenny/app/src/main/res/layout/activity_setting.xml
@@ -1,11 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Setting"
-        android:layout_gravity="center"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/booth_detail_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="#0c2044">
+
+            <!--
+            -->
+            <ImageView
+                android:id="@+id/btn_setting_back"
+                android:layout_width="12dp"
+                android:layout_height="20dp"
+                android:layout_gravity="left"
+                android:layout_marginLeft="6dp"
+                android:gravity="left"
+                android:src="@drawable/booth_back" />
+
+
+            <TextView
+                android:id="@+id/tv_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="12dp"
+                android:clickable="false"
+                android:focusable="false"
+                android:longClickable="false"
+                android:text="설정"
+                android:textColor="#ffffff"
+                android:textSize="17sp" />
+        </android.support.v7.widget.Toolbar>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/setting_background"
+        android:padding="8dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:src="@drawable/setting_setting"
+            android:id="@+id/btn_logout"
+            android:layout_marginBottom="13dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="로그아웃"
+                android:textColor="#000000"
+                android:textSize="17sp"
+
+                android:layout_marginLeft="9dp"
+                android:layout_marginTop="13dp"
+
+                />
+            </LinearLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/setting_divideline"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:src="@drawable/setting_setting"
+            android:id="@+id/btn_version"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:text="버전"
+                android:textColor="#000000"
+                android:textSize="17sp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginTop="13dp"
+                android:layout_marginBottom="13dp"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="1.0.0"
+                android:textColor="#959595"
+                android:textSize="17sp"
+                android:gravity="right"
+                android:layout_marginRight="9dp"
+                android:layout_marginTop="13dp"
+                android:layout_marginBottom="13dp"
+                />
+
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
