--- a/ComePenny/app/src/main/res/layout/activity_booth_detail.xml
+++ b/ComePenny/app/src/main/res/layout/activity_booth_detail.xml
@@ -1,50 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/booth_detail_toolbar"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#0c2044">
+        android:layout_height="wrap_content">
 
-        <!--
-        -->
-        <ImageView
-            android:layout_marginLeft="6dp"
-            android:layout_width="12dp"
-            android:layout_height="20dp"
-            android:gravity="left"
-            android:layout_gravity="left"
-            android:id="@+id/btn_booth_back"
-            android:src="@drawable/booth_back"/>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/booth_detail_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="#0c2044">
+
+            <!--
+            -->
+            <ImageView
+                android:id="@+id/btn_booth_back"
+                android:layout_width="12dp"
+                android:layout_height="20dp"
+                android:layout_gravity="left"
+                android:layout_marginLeft="6dp"
+                android:gravity="left"
+                android:src="@drawable/booth_back" />
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:id="@+id/tv_logo_name"
-            android:text="Costco"
-            android:textSize="20dp"
-            android:textColor="#ffffff"
-            android:clickable="false"
-            android:focusable="false"
-            android:longClickable="false"/>
-    </android.support.v7.widget.Toolbar>
-</RelativeLayout>
+            <TextView
+                android:id="@+id/tv_logo_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:focusable="false"
+                android:longClickable="false"
+                android:text="Lego"
+                android:textColor="#ffffff"
+                android:textSize="20dp" />
+        </android.support.v7.widget.Toolbar>
+    </RelativeLayout>
 
 
     <ListView
-        android:listSelector="@android:color/transparent"
-        android:paddingTop="4dp"
-        android:scrollbars="none"
+        android:id="@+id/lv_booth_detail_idea"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lv_booth_detail_idea" />
+        android:listSelector="@android:color/transparent"
+        android:paddingTop="4dp"
+        android:scrollbars="none" />
 
 
 </LinearLayout>
