--- a/ComePenny/app/src/main/res/layout/activity_myinfo.xml
+++ b/ComePenny/app/src/main/res/layout/activity_myinfo.xml
@@ -4,16 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/booth_detail_toolbar"
+            android:id="@+id/mainidea_toolbar"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="#0c2044">
-
 
             <!--
             -->
@@ -32,7 +32,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="12dp"
                 android:clickable="false"
                 android:focusable="false"
                 android:longClickable="false"
@@ -43,11 +42,12 @@
     </RelativeLayout>
 
 
-
     <FrameLayout
-        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#e5e5e5">
+        android:background="#e5e5e5"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -55,12 +55,12 @@
 
 
             <ListView
-                android:listSelector="@android:color/transparent"
-                android:paddingTop="4dp"
-                android:scrollbars="none"
+                android:id="@+id/lv_mywrite"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/lv_mywrite" />
+                android:listSelector="@android:color/transparent"
+                android:paddingTop="4dp"
+                android:scrollbars="none" />
 
 
         </LinearLayout>
