my info dialog title수정

--- a/ComePenny/app/src/main/res/layout/myinfoimg_dialog.xml
+++ b/ComePenny/app/src/main/res/layout/myinfoimg_dialog.xml
@@ -3,11 +3,29 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <TableRow
+        android:id="@+id/dialogtitle"
+        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:background="@drawable/setting_setting"
+        >
+        <TextView
+            android:layout_width="340dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:text="사진 선택"
+            android:textSize="19sp"
+            android:textStyle="bold"
+            android:textColor="#0c2044"/>
+
+
+    </TableRow>
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:src="@drawable/myinfo_divideline" />
+        android:layout_height="2dp"
+        android:background="#0c2044" />
 
     <TableRow
         android:id="@+id/row1"
