write 버튼추가 write 페이지1 추가(미완료)

--- a/ComePenny/app/src/main/res/layout/activity_write.xml
+++ b/ComePenny/app/src/main/res/layout/activity_write.xml
@@ -1,43 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#e5e5e5"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/write_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#0c2044">
+
+        <ImageView
+            android:id="@+id/btn_write_back"
+            android:layout_width="12dp"
+            android:layout_height="20dp"
+            android:layout_gravity="left"
+            android:layout_marginLeft="6dp"
+            android:gravity="left"
+            android:src="@drawable/booth_back" />
+
+
+        <ImageView
+            android:layout_width="93dp"
+            android:layout_height="21dp"
+            android:layout_gravity="center"
+            android:clickable="false"
+            android:focusable="false"
+            android:longClickable="false"
+            android:src="@drawable/main_comepenny" />
+    </android.support.v7.widget.Toolbar>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/booth_detail_toolbar"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/write_top_layout"
+            android:layout_centerHorizontal="true"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="3">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:src="@drawable/write_photo_btn" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/write_video_btn" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/write_link_btn" />
+                
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="7dp"
+                android:layout_marginTop="6dp"
+                android:src="@drawable/write_write" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/write_top_layout"
+            android:layout_marginTop="8dp"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="#0c2044">
+            android:layout_height="match_parent">
 
-            <!--
-            -->
-            <ImageView
-                android:layout_marginLeft="6dp"
-                android:layout_width="12dp"
-                android:layout_height="20dp"
-                android:gravity="left"
-                android:layout_gravity="left"
-                android:id="@+id/btn_booth_back"
-                android:src="@drawable/booth_back"/>
-
-
-
-            <ImageView
-                android:layout_width="93dp"
-                android:layout_height="21dp"
-                android:layout_gravity="center"
-                android:id="@+id/img_logo"
-                android:clickable="false"
-                android:focusable="false"
-                android:longClickable="false"
-                android:src="@drawable/main_comepenny"/>
-        </android.support.v7.widget.Toolbar>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:background="#ffffff"
+                android:hint="Title"
+                android:textColor="#000000"
+                android:textColorHint="#a0a0a0"
+                android:textSize="16dp" />
+        </LinearLayout>
     </RelativeLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Write"
-        android:layout_gravity="center"/>
+
 </LinearLayout>
