--- a/ComePenny/app/src/main/res/layout/activity_myinfo.xml
+++ b/ComePenny/app/src/main/res/layout/activity_myinfo.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/booth_detail_toolbar"
+            android:id="@+id/myinfo_toolbar"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="#0c2044">
