--- a/ComePenny/app/src/main/res/layout/activity_booth_detail_header.xml
+++ b/ComePenny/app/src/main/res/layout/activity_booth_detail_header.xml
@@ -42,7 +42,7 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true" />
                 <TextView
-                    android:id="@+id/txt_main_idea"
+                    android:id="@+id/booth_main_idea"
                     android:textColor="#eeeeee"
                     android:textSize="15dp"
                     android:layout_width="wrap_content"
@@ -52,32 +52,6 @@
                     android:layout_centerHorizontal="true" />
             </LinearLayout>
 
-
-            <LinearLayout
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:layout_marginLeft="6dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:textColor="#eeeeee"
-                    android:textSize="15dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Pick : "
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true" />
-                <TextView
-                    android:id="@+id/txt_main_pick"
-                    android:textColor="#eeeeee"
-                    android:textSize="15dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="12"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true" />
-            </LinearLayout>
 
         </LinearLayout>
 
@@ -108,6 +82,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/booth_explanation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Market"
