--- a/ComePenny/app/src/main/res/layout/row_booth.xml
+++ b/ComePenny/app/src/main/res/layout/row_booth.xml
@@ -38,7 +38,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true" />
             <TextView
-                android:id="@+id/txt_main_idea"
+                android:id="@+id/txt_boothmain_idea"
                 android:textColor="#eeeeee"
                 android:textSize="12dp"
                 android:layout_width="wrap_content"
@@ -61,11 +61,11 @@
                 android:textSize="12dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pick : "
+                android:text="Like : "
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true" />
             <TextView
-                android:id="@+id/txt_main_pick"
+                android:id="@+id/txt_boothmain_like"
                 android:textColor="#eeeeee"
                 android:textSize="12dp"
                 android:layout_width="wrap_content"
