--- a/ComePenny/app/src/main/res/layout/activity_booth_detail.xml
+++ b/ComePenny/app/src/main/res/layout/activity_booth_detail.xml
@@ -34,7 +34,7 @@
                 android:clickable="false"
                 android:focusable="false"
                 android:longClickable="false"
-                android:text="Lego"
+                android:text=""
                 android:textColor="#ffffff"
                 android:textSize="20dp" />
         </android.support.v7.widget.Toolbar>
