--- a/ComePenny/app/src/main/res/layout/activity_booth_detail_header.xml
+++ b/ComePenny/app/src/main/res/layout/activity_booth_detail_header.xml
@@ -47,7 +47,7 @@
                     android:textSize="15dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="189"
+                    android:text=""
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true" />
             </LinearLayout>
