--- a/ComePenny/app/src/main/res/layout/row_booth.xml
+++ b/ComePenny/app/src/main/res/layout/row_booth.xml
@@ -20,7 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="22dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
         <LinearLayout
             android:layout_gravity="center_vertical"
