--- a/ComePenny/app/src/main/res/layout/activity_write.xml
+++ b/ComePenny/app/src/main/res/layout/activity_write.xml
@@ -71,6 +71,7 @@
             </LinearLayout>
 
             <ImageView
+                android:id="@+id/btn_write_write"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="7dp"
@@ -86,6 +87,7 @@
             android:layout_height="match_parent">
 
             <EditText
+                android:id="@+id/edit_content"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
