--- a/ComePenny/app/src/main/res/layout/activity_write_booth_select.xml
+++ b/ComePenny/app/src/main/res/layout/activity_write_booth_select.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e5e5e5">
+    android:background="#e5e5e5"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/write_toolbar"
+        android:id="@+id/write_select_toolbar"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="#0c2044">
 
         <ImageView
-            android:id="@+id/btn_write_booth_select_back"
+            android:id="@+id/btn_select_back"
             android:layout_width="12dp"
             android:layout_height="20dp"
             android:layout_gravity="left"
@@ -29,6 +30,20 @@
             android:longClickable="false"
             android:src="@drawable/main_comepenny" />
     </android.support.v7.widget.Toolbar>
-
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="530dp">
+    <GridView
+        android:paddingTop="4dp"
+        android:scrollbars="none"
+        android:listSelector="@android:color/transparent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/gv_select_booth"
+        android:divider="#00000000"
+        android:layout_centerHorizontal="true"
+        android:numColumns="2"
+        android:paddingRight="4dp"
+        />
+    </LinearLayout>
 </LinearLayout>
