--- a/ComePenny/app/src/main/res/layout/activity_main.xml
+++ b/ComePenny/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
                 android:id="@+id/main_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:background="#0c2044">
+                android:background="#29c5e4">
 
                 <ImageView
                     android:id="@+id/img_main_myinfo"
@@ -34,7 +34,7 @@
                     android:clickable="false"
                     android:focusable="false"
                     android:longClickable="false"
-                    android:src="@drawable/main_comepenny"/>
+                    android:src="@drawable/logo"/>
 
                 <ImageView
                     android:id="@+id/img_main_setting"
