--- a/ComePenny/app/src/main/res/layout/activity_booth_detail.xml
+++ b/ComePenny/app/src/main/res/layout/activity_booth_detail.xml
@@ -12,7 +12,7 @@
             android:id="@+id/booth_detail_toolbar"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="#0c2044">
+            android:background="#29c5e4">
 
             <!--
             -->
