--- a/ComePenny/app/src/main/res/layout/activity_write.xml
+++ b/ComePenny/app/src/main/res/layout/activity_write.xml
@@ -9,7 +9,7 @@
         android:id="@+id/write_toolbar"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="#0c2044">
+        android:background="#29c5e4">
 
         <ImageView
             android:id="@+id/btn_write_back"
@@ -89,12 +89,12 @@
             <EditText
                 android:id="@+id/edit_content"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="410dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
                 android:background="#ffffff"
-                android:hint="Title"
+                android:hint="idea"
                 android:textColor="#000000"
                 android:textColorHint="#a0a0a0"
                 android:textSize="16dp" />
