--- a/ComePenny/app/src/main/res/layout/fragment_idea_header.xml
+++ b/ComePenny/app/src/main/res/layout/fragment_idea_header.xml
@@ -8,14 +8,40 @@
             android:id="@+id/recycler_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#ffffff"
             android:orientation="vertical"
-            android:padding="5dp">
+          >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/circle"
+                    android:layout_gravity="center_vertical"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hot Category"
+                    android:textSize="13dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginBottom="9dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/circle"
+                    android:layout_gravity="center_vertical"/>
+
+            </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
+                android:background="#ffffff"
                 android:id="@+id/recyclerview"
                 android:layout_width="wrap_content"
-                android:layout_height="160dp" />
+                android:layout_height="167dp"
+                android:layout_marginBottom="5dp"/>
         </LinearLayout>
 
 </LinearLayout>
