--- a/ComePenny/app/src/main/res/layout/row_idea.xml
+++ b/ComePenny/app/src/main/res/layout/row_idea.xml
@@ -3,9 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="5dp"
     android:paddingLeft="4dp"
     android:paddingRight="4dp"
+    android:paddingTop="5dp"
 
     >
 
@@ -15,83 +15,108 @@
         android:background="@drawable/idea_list_back"
         android:orientation="horizontal">
 
-        <ImageView
-            android:scaleType="centerCrop"
-            android:id="@+id/iv_company"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/ex1" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingLeft="7dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="9dp">
+                android:orientation="horizontal">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="18dp">
 
-                    android:text="Writer : "
-                    android:textColor="#959595"
-                    android:textSize="15sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Writer : "
+                        android:textColor="#959595"
+                        android:textSize="15sp" />
 
-                <TextView
-                    android:id="@+id/tv_UserId"
+                    <TextView
+                        android:id="@+id/tv_UserId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="jihoon1234"
+                        android:textColor="#535353"
+                        android:textSize="15sp" />
+                </LinearLayout>
+
+                <ImageView
+
+                    android:id="@+id/iv_company"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="jihoon1234"
-                    android:textColor="#535353"
-                    android:textSize="15sp" />
+                    android:layout_gravity="right"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="200dp"
+                    android:paddingTop="4dp"
+                    android:paddingRight="4dp"
+                    android:src="@drawable/ct" />
+
             </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_idea"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
-                android:maxLines="1"
+                android:textSize="15dp"
+                android:textStyle="normal"
                 android:layout_weight="1"
-                android:text="Ideas Worth Sharing" />
+                android:paddingBottom="13dp"
+                android:text="적외선으로 상대의 위치를 추적하는 적외선 탐색 추적 장비와 야간에도 적을 물리친다.  " />
 
             <ImageView
-                android:layout_width="match_parent"
+                android:layout_width="380dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="7dp"
-                android:background="@drawable/idea_bar" />
+                android:layout_gravity="center"
+                android:layout_marginBottom="6dp"
+                android:background="@drawable/line2" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:gravity="right"
-                android:layout_marginRight="6dp">
+                android:layout_marginRight="6dp"
+                android:layout_marginBottom="10dp"
+                android:gravity="right">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Homo Erectus"
+                    android:textSize="13dp"
+                    android:textColor="#29c5e4"
+                    android:layout_gravity="left"
+                    android:layout_weight="1"
+                    android:paddingLeft="9dp"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="view : "
                         android:textColor="#959595"
-                        android:textSize="12sp"
-                        />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tv_count_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="231234"
                         android:layout_marginRight="12dp"
+                        android:text="231234"
                         android:textSize="12sp" />
 
                 </LinearLayout>
