--- a/ComePenny/app/src/main/res/layout/row_booth.xml
+++ b/ComePenny/app/src/main/res/layout/row_booth.xml
@@ -44,7 +44,7 @@
                 android:textSize="12dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="189"
+                android:text=""
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true" />
         </LinearLayout>
@@ -71,7 +71,7 @@
                 android:textSize="12dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="12"
+                android:text=" "
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true" />
         </LinearLayout>
