--- a/ComePenny/app/src/main/res/layout/activity_write_booth_select.xml
+++ b/ComePenny/app/src/main/res/layout/activity_write_booth_select.xml
@@ -32,7 +32,7 @@
     </android.support.v7.widget.Toolbar>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="530dp">
+        android:layout_height="match_parent">
     <GridView
         android:paddingTop="4dp"
         android:scrollbars="none"
