--- a/ComePenny/app/src/main/res/layout/row_idea.xml
+++ b/ComePenny/app/src/main/res/layout/row_idea.xml
@@ -9,6 +9,12 @@
 
     >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,17 +56,7 @@
                         android:textSize="15sp" />
                 </LinearLayout>
 
-                <ImageView
 
-                    android:id="@+id/iv_company"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="200dp"
-                    android:paddingTop="4dp"
-                    android:paddingRight="4dp"
-                    android:src="@drawable/ct" />
 
             </LinearLayout>
 
@@ -149,4 +145,14 @@
         </LinearLayout>
 
     </LinearLayout>
+
+        <ImageView
+            android:id="@+id/iv_company"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:paddingTop="4dp"
+            android:paddingRight="4dp"
+            android:src="@drawable/ct" />
+    </RelativeLayout>
 </LinearLayout>
