--- a/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
+++ b/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
@@ -101,7 +101,7 @@
                 <TextView
                     android:id="@+id/tv_ideaoriginal"
                     android:layout_width="match_parent"
-                    android:layout_height="122dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
