--- a/ComePenny/app/src/main/res/layout/fragment_idea.xml
+++ b/ComePenny/app/src/main/res/layout/fragment_idea.xml
@@ -6,6 +6,7 @@
 
 
         <ListView
+            android:divider="#00000000"
             android:listSelector="@android:color/transparent"
             android:paddingTop="4dp"
             android:scrollbars="none"
