--- a/ComePenny/app/src/main/res/layout/activity_idea_detail.xml
+++ b/ComePenny/app/src/main/res/layout/activity_idea_detail.xml
@@ -41,6 +41,7 @@
 
 
     <ListView
+        android:divider="#00000000"
         android:id="@+id/lv_idea_detail_comments"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
