--- a/ComePenny/app/src/main/res/layout/activity_myinfo.xml
+++ b/ComePenny/app/src/main/res/layout/activity_myinfo.xml
@@ -54,6 +54,7 @@
 
 
             <ListView
+                android:divider="#00000000"
                 android:listSelector="@android:color/transparent"
                 android:paddingTop="4dp"
                 android:scrollbars="none"
