--- a/ComePenny/app/src/main/res/layout/activity_write.xml
+++ b/ComePenny/app/src/main/res/layout/activity_write.xml
@@ -5,6 +5,7 @@
     android:background="#e5e5e5"
     android:orientation="vertical">
 
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/write_toolbar"
         android:layout_width="match_parent"
@@ -13,63 +14,64 @@
 
         <ImageView
             android:id="@+id/btn_write_back"
-            android:layout_width="12dp"
-            android:layout_height="20dp"
-            android:layout_gravity="left"
             android:layout_marginLeft="6dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:gravity="left"
-            android:src="@drawable/booth_back" />
+            android:src="@drawable/booth_back"/>
 
 
-        <ImageView
-            android:layout_width="93dp"
-            android:layout_height="21dp"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:id="@+id/img_logo"
             android:clickable="false"
             android:focusable="false"
             android:longClickable="false"
-            android:src="@drawable/main_comepenny" />
-    </android.support.v7.widget.Toolbar>
+            android:text="글쓰기"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            />
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/btn_write_write"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/write_top_layout"
-            android:layout_centerHorizontal="true"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/btn_write_write"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="7dp"
-                android:layout_marginTop="6dp"
-                android:src="@drawable/write_write" />
+            android:layout_gravity="right|center"
+            android:layout_marginRight="6dp"
+            android:src="@drawable/write_write"/>
+    </android.support.v7.widget.Toolbar>
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/write_top_layout"
-            android:layout_marginTop="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/edit_content"
-                android:layout_width="match_parent"
-                android:layout_height="450dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:background="#ffffff"
-                android:hint="idea"
-                android:textColor="#000000"
-                android:textColorHint="#a0a0a0"
-                android:textSize="16dp" />
-        </LinearLayout>
-    </RelativeLayout>
+     <RelativeLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent">
 
-</LinearLayout>
+
+
+         <LinearLayout
+             android:id="@+id/write_top_layout"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
+
+             <EditText
+                 android:id="@+id/edit_content"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_marginTop="10dp"
+                 android:layout_marginBottom="10dp"
+                 android:gravity="top"
+                 android:layout_marginLeft="6dp"
+                 android:layout_marginRight="6dp"
+                 android:background="#ffffff"
+                 android:hint="  당신의 아이디어를 이야기해 보세요."
+                 android:textColor="#000000"
+                 android:textColorHint="#b6b6b6"
+                 android:textSize="15dp" />
+         </LinearLayout>
+     </RelativeLayout>
+
+ </LinearLayout>
